# echoforge

./: .flake8  .gitignore  .pre-commit-config.yaml  AUTH_MIGRATION_PLAN.md  CONTRIBUTING.md  CSM_INTEGRATION_PLAN.md  DEBUGGING_GUIDE.md  DOCUMENTATION_PLAN.md  Dockerfile  FUTURE_ENHANCEMENTS.md  LICENSE  Makefile  README.md  VOICE_SETUP_GUIDE.md  VOICE_SETUP_README.md  debug_env.py  development_notes.md  docker-compose.yml  fix_auth_cookie.py  fix_auth_issues.py  fix_auth_session.py  fix_auth_styling.py  main.py  port_stability_changes.md  pyproject.toml  requirements-dev.txt  requirements-freeze.txt  requirements.txt  run.py  run_admin_tests.sh  run_server.sh  run_tests.sh  setup.py  setup_env.sh  setup_voices.py  stop_server.sh  ux_improvement_plan.md
.github/workflows/: ci.yml.disabled  tests.yml
app/: __init__.py  main.py
app/api/: __init__.py  admin.py  auth_routes.py  auth_routes.py.bak  auth_routes.py.bak2  character_showcase_routes.py  debug_auth.py  debug_routes.py  dependencies.py  router.py  routes.py  schemas.py  voice_browser.py  voice_cloning_routes.py  voice_generator.py  voice_routes.py
app/core/: __init__.py  auth.py  checkpoint_loader.py  config.py  env_loader.py  models.py  security.py  task_manager.py  test_mode.py  voice_generator.py
app/db/: __init__.py  base.py  models.py  session.py
app/email_templates/: password_reset.html
app/middleware/: test_mode_middleware.py
app/models/: README.md  __init__.py  csm_model.py  direct_csm.py  tts_poc_adapter.py
app/routes/: __init__.py  web.py
app/services/: email_service.py  user_service.py
app/static/: character_showcase.html  test_page.html
app/ui/: __init__.py  auth_routes.py  debug_routes.py  routes.py
docker/: Dockerfile.worker
docs/: API.md  DIRECT_CSM.md  README.md  TESTING.md  TODO.md  VOICE_UI_TODO.md  api_reference.md  auth_fixes.md  auth_improvement_plan.md  authentication_system.md  developer_guide.md  environment.md  user_guide.md
examples/: README.md  csm_model_example.py
scripts/: README.md  README_CSM.md  __init__.py  commit_auth_plan.sh  connect_auth_backend.py  create_test_audio.py  debug_silentcipher.py  direct_csm_test.py  disable_auth.py  generate_test_images.py  generate_voice.py  init_db.py  patch_voice_generator.py  run_voice_test.sh  setup_frontend_auth.sh  simple_silentcipher_test.py  test_admin_direct_csm.py  test_admin_voice.py  test_auth.py  test_csm_voice.py  test_direct_csm.py  test_direct_voice.py  test_voice_api.py  test_voice_browser.py
static/: audio_debug.html  debug.html
static/css/: admin.css  auth.css  characters.css  styles.css
static/images/: default-avatar.html  echoforge-logo.html
static/js/: admin.js  audio_fix.js  characters.js  main.js
templates/: characters.html  debug_generate.html  generate.html  index.html
templates/admin/: config.html  dashboard.html  layout.html  logs.html  models.html  tasks.html  voices.html
templates/auth/: forgot_password.html  login.html  profile.html  reset_password.html  signup.html
tests/: __init__.py  conftest.py  next_param_test.py  redirect_flow_test.py  test_api.py  test_app.py  test_config.py  test_server.py  test_url_validation.py  test_version.py
tests/api/: test_admin_api.py
tests/e2e/: test_admin_e2e.py
tests/ui/: test_admin_js.py  (+5 more)
(+21 files in other folders)
