[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "echoforge"
version = "0.2.0"
description = "Advanced voice generation platform"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
    {name = "EchoForge Team"}
]
maintainers = [
    {name = "EchoForge Team"}
]
keywords = ["voice", "speech", "generation", "ai", "tts"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn>=0.23.2",
    "pydantic>=2.4.2",
    "jinja2>=3.1.2",
    "python-multipart>=0.0.6",
    "aiofiles>=23.2.1",
    "numpy>=1.26.0",
    "soundfile>=0.12.1",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=24.0.0",
    "isort>=5.12.0",
    "mypy>=1.8.0",
    "flake8>=7.0.0",
]
torch = [
    "torch>=2.4.0",
    "torchaudio>=2.4.0",
    "librosa>=0.10.0",
    "tokenizers>=0.21.0",
    "transformers>=4.48.0",
    "huggingface_hub>=0.28.1",
]
full = [
    "torch>=2.4.0",
    "torchaudio>=2.4.0",
    "librosa>=0.10.0",
    "tokenizers>=0.21.0",
    "transformers>=4.48.0",
    "huggingface_hub>=0.28.1",
    "moshi>=0.2.2",
    "torchtune>=0.4.0",
    "torchao>=0.9.0",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/echoforge"
"Bug Tracker" = "https://github.com/yourusername/echoforge/issues"
"Documentation" = "https://github.com/yourusername/echoforge/wiki"

[tool.setuptools]
packages = ["app"]

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*" 